[build-system]
requires = ["hatchling>=1.24", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.version]
path = "xyscreens/_version.py"

[project]
name = "xyscreens"
dynamic = ["version"]
license = {text = "Apache-2.0"}
authors = [
    { name="Rogier van Staveren", email="rogier@batoid.com" }
]
description = "Library to control XY Screens projector screens and lifts."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta"
    
]
dependencies = [
    "pyserial>=3.5",
    "pyserial_asyncio>=0.6"
]

[project.urls]
Homepage = "https://github.com/rrooggiieerr/xyscreens.py"
Issues = "https://github.com/rrooggiieerr/xyscreens.py/issues"

[tool.black]
target-version = ["py311", "py312"]
exclude = 'generated'

[tool.isort]
# https://github.com/PyCQA/isort/wiki/isort-Settings
profile = "black"

[tool.mypy]
python_version = "3.11"
mypy_path = "xyscreens"

[[tool.mypy.overrides]]
module = ["serial.*", "serial_asyncio.*"]
ignore_missing_imports = true
